--- a/chat.html
+++ b/chat.html
@@ -4,23 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <div class="chat-container">
         <h2>Bem-vindo, <span id="userName"></span></h2>
-        <div id="chatBox">
-            <!-- As mensagens serão exibidas aqui -->
-        </div>
-
-        <textarea id="message" placeholder="Digite uma mensagem"></textarea>
-        <button id="sendMessage">Enviar</button>
-
-        <h3>Usuários Online:</h3>
-        <ul id="userList"></ul>
+        <div id="chatMessages"></div>
+        <input type="text" id="message" placeholder="Digite sua mensagem">
+        <button onclick="sendMessage()">Enviar</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
