--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
         .discord-button:hover {
             background-color: #5b6e98; /* Darker Discord color on hover */
         }
+
+        /* Styles for the YouTube buttons */
+        .youtube-button {
+            position: absolute;
+            top: 70%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* Centers the button */
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: #ff0000; /* YouTube red */
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        .youtube-button:hover {
+            background-color: #cc0000; /* Darker red on hover */
+        }
+
     </style>
 </head>
 <body>
@@ -75,6 +96,12 @@
 
     <!-- Discord button -->
     <a href="https://discord.gg/7Qys7Gt45g" class="discord-button" target="_blank">Join our Discord</a>
+
+    <!-- YouTube button for XUNAXI_Scripts -->
+    <a href="https://www.youtube.com/@XUNAXI_Scripts" class="youtube-button" target="_blank">Visit XUNAXI_Scripts YouTube</a>
+
+    <!-- YouTube button for DonJosX -->
+    <a href="https://youtube.com/@donjosx?si=9a65UUaIMVRtSlZu" class="youtube-button" target="_blank">Visit DonJosX YouTube</a>
 
 </body>
 </html>
