--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="image-fullscreen"></div>
 
     <!-- Botão de download -->
-    <a href="imagem.jpg" class="download-button" download="image.jpg">Download Image</a>
+    <a href="glove abuse 3.0v.txt" class="download-button" download="glove abuse 3.0v.txt">Download Script</a>
 
     <!-- Botão do Discord -->
     <a href="https://discord.gg/7Qys7Gt45g" class="discord-button" target="_blank">Join our Discord</a>
