--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Fundo -->
-    <div class="image-fullscreen"></div>
+    <!-- Background Image -->
+    <div class="background"></div>
 
-    <!-- Botões -->
-    <div class="button-container">
-        <!-- Botão de download -->
-        <button class="button download-button" id="downloadBtn">Download Glove Abuse</button>
-
-        <!-- Botão do Discord -->
-        <button class="button discord-button" id="discordBtn">Join our Discord</button>
-
-        <!-- Botões do YouTube -->
-        <button class="button youtube-button" id="youtubeXunaxi">Visit XUNAXI YouTube</button>
-        <button class="button youtube-button" id="youtubeDonJosX">Visit DonJosX YouTube</button>
-    </div>
+    <!-- Buttons -->
+    <button id="downloadBtn" class="button">Download File</button>
+    <button id="discordBtn1" class="button">Join Discord 1</button>
+    <button id="discordBtn2" class="button">Join Discord 2</button>
+    <button id="youtubeXunaxi" class="button">Visit XUNAXI YouTube</button>
+    <button id="youtubeDonJosX" class="button">Visit DonJosX YouTube</button>
+    <button id="googleBtn" class="button">Visit Google</button>
 
     <script src="script.js"></script>
 </body>
