--- a/index.html
+++ b/index.html
@@ -3,20 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Buttons</title>
+    <title>Interactive Buttons with Scrolling</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Background Image -->
     <div class="background"></div>
 
-    <!-- Buttons -->
-    <button id="downloadBtn" class="button">Download File</button>
-    <button id="discordBtn1" class="button">Join Discord 1</button>
-    <button id="discordBtn2" class="button">Join Discord 2</button>
-    <button id="youtubeXunaxi" class="button">Visit XUNAXI YouTube</button>
-    <button id="youtubeDonJosX" class="button">Visit DonJosX YouTube</button>
-    <button id="googleBtn" class="button">Visit Google</button>
+    <!-- Page Content -->
+    <div class="content">
+        <section>
+            <h1>Welcome to the Interactive Page</h1>
+            <p>Scroll down to explore the buttons and features!</p>
+        </section>
+        
+        <section class="button-section">
+            <h2>Interactive Buttons</h2>
+            <!-- Buttons -->
+            <button id="downloadBtn" class="button">Download File</button>
+            <button id="discordBtn1" class="button">Join Discord 1</button>
+            <button id="discordBtn2" class="button">Join Discord 2</button>
+            <button id="youtubeXunaxi" class="button">Visit XUNAXI YouTube</button>
+            <button id="youtubeDonJosX" class="button">Visit DonJosX YouTube</button>
+            <button id="googleBtn" class="button">Visit Google</button>
+        </section>
+
+        <section>
+            <h2>Thank You for Visiting!</h2>
+            <p>Feel free to explore the links and download resources.</p>
+        </section>
+    </div>
 
     <script src="script.js"></script>
 </body>
