--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!-- Page Content -->
     <div class="content">
         <section>
-            <h1>Welcome to the Interactive Page</h1>
+            <h1>Welcome to the Xunaxi scripts Page</h1>
             <p>Scroll down to explore the buttons and features!</p>
         </section>
         
         <section class="button-section">
-            <h2>Interactive Buttons</h2>
+            <h2>Buttons</h2>
             <!-- Buttons -->
             <button id="downloadBtn" class="button">Download File</button>
             <button id="discordBtn1" class="button">Join Discord 1</button>
